--- a/tests/host/README
+++ b/tests/host/README
@@ -7,7 +7,7 @@ All results are stored or linked from ./bin/ .
 Regular host test:
 	make <no argument>
 
-Build all examples with debug enabled: (WIP)
+Build all examples with debug enabled (D=1): (WIP)
 	make D=1 examples
 
 Show the example list:
@@ -18,15 +18,13 @@ Build one example
 run it:
 	./bin/Blink -h
 
-Interesting examples:
+Non exhaustive list of working examples:
 	make D=1 ../../libraries/esp8266/examples/Blink/Blink
 	make D=1 ../../libraries/ESP8266WiFi/examples/WiFiClient/WiFiClient
 	make D=1 ../../libraries/ESP8266WebServer/examples/HelloServer/HelloServer
-	
-Needs tweaking:
 	make D=1 ../../libraries/ESP8266WebServer/examples/AdvancedWebServer/AdvancedWebServer
-		(declare 'void drawGraph();' on top of file)
-
-Compile your sketches (remove the .ino part of the sketch file name):
-	make D=1 ULIBDIR=/path/to/your/arduino/libraries:/path/to/another/one /path/to/your/sketchdir/sketch
-
+	
+	TO CHECK: mDNS is implemented, receive and sends UDP packets
+	
+Compile your sketches (remove the '.ino' part of the sketch file name):
+	make D=1 ULIBDIR=/path/to/your/arduino/libraries:/path/to/another/one /path/to/your/sketchdir/sketch/sketch
